--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "@newrelic/newrelic-oss-cli": "^0.1.2",
     "@newrelic/nr-querypack": "https://git@github.com/newrelic/nr-querypack",
     "@octokit/rest": "^19.0.7",
+    "@wdio/browserstack-service": "^8.12.2",
     "@wdio/cli": "^8.10.5",
     "@wdio/local-runner": "^8.10.5",
     "@wdio/mocha-framework": "^8.10.4",
