--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
     "uuid": "^9.0.0",
     "wait-on": "^7.0.1",
     "wd": "^1.11.2",
+    "wdio-lambdatest-service": "^2.0.3",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
