--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -103,144 +103,181 @@ jobs:
 
   # Jobs for workflow_dispatch events
 
-  find-pull-request:
-    name: Find pull request target
-    if: github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    outputs:
-      pull-request-target: ${{ steps.pull-request-target.outputs.results }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-      - name: Find pull request target
-        id: pull-request-target
-        uses: ./.github/actions/find-pull-request
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pr_required: true
+  # find-pull-request:
+  #   name: Find pull request target
+  #   if: github.event_name == 'workflow_dispatch'
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   outputs:
+  #     pull-request-target: ${{ steps.pull-request-target.outputs.results }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: lts/*
+  #     - name: Find pull request target
+  #       id: pull-request-target
+  #       uses: ./.github/actions/find-pull-request
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         pr_required: true
 
-  pending-comment-pull-request:
-    name: Pending comment pull request
-    if: github.event_name == 'workflow_dispatch'
-    needs: find-pull-request
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Setup runner
-        run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y git tzdata
-      - uses: actions/checkout@v3
-        with:
-          ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-      - name: Get workflow time
-        id: workflow-time
-        run: echo "results=$(TZ=America/Chicago date +'%B %d, %Y %H:%M:%S %Z')" >> $GITHUB_OUTPUT
-      - name: Comment pull request
-        uses: ./.github/actions/comment-pull-request
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
-          comment: |
-            [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Pending-yellow)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
+  # pending-comment-pull-request:
+  #   name: Pending comment pull request
+  #   if: github.event_name == 'workflow_dispatch'
+  #   needs: find-pull-request
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   steps:
+  #     - name: Setup runner
+  #       run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y git tzdata
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: lts/*
+  #     - name: Get workflow time
+  #       id: workflow-time
+  #       run: echo "results=$(TZ=America/Chicago date +'%B %d, %Y %H:%M:%S %Z')" >> $GITHUB_OUTPUT
+  #     - name: Comment pull request
+  #       uses: ./.github/actions/comment-pull-request
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
+  #         comment: |
+  #           [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Pending-yellow)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
 
-            Last ran on `${{ steps.workflow-time.outputs.results }}`
-            Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
-          comment_tag: <!-- browser_agent pull request checks -->
+  #           Last ran on `${{ steps.workflow-time.outputs.results }}`
+  #           Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
+  #         comment_tag: <!-- browser_agent pull request checks -->
 
-  wdio-coverage:
-    name: WDIO coverage
+  # wdio-coverage:
+  #   name: WDIO coverage
+  #   if: github.event_name == 'workflow_dispatch'
+  #   needs: find-pull-request
+  #   uses: ./.github/workflows/wdio-single-browser.yml
+  #   with:
+  #     ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+  #     browser-target: chrome@latest
+  #     build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
+  #     coverage: true
+  #   secrets: inherit
+
+  integration-testing:
+    name: Integration testing
     if: github.event_name == 'workflow_dispatch'
-    needs: find-pull-request
-    uses: ./.github/workflows/wdio-single-browser.yml
+    # needs: [find-pull-request]
+    strategy:
+      max-parallel: 10
+      fail-fast: false
+      matrix:
+        suite: [jil_unit, jil_functional, wdio]
+        browser: [chrome@*, firefox@*, safari@*, edge@*, ios@*, android@*, ie@11, ios@<16, android@<13]
+        exclude:
+          - suite: jil_unit
+            browser: ios@*
+          - suite: jil_unit
+            browser: android@*
+          - suite: jil_functional
+            browser: ios@*
+          - suite: jil_functional
+            browser: android@*
+          - suite: wdio
+            browser: ios@<16
+          - suite: wdio
+            browser: android@<13
+        # include:
+        #   - suite: wdio
+        #     browser: chrome@latest
+        #     coverage: true
+    uses: ./.github/workflows/integration-tests.yml
     with:
-      ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
-      browser-target: chrome@latest
-      build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
-      coverage: true
+      suite: ${{ matrix.suite }}
+      browser: ${{ matrix.browser }}
+      coverage: ${{ matrix.coverage || false }}
+      # ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+      build-number: PR-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
     secrets: inherit
 
-  wdio:
-    name: WDIO
-    if: github.event_name == 'workflow_dispatch'
-    needs: find-pull-request
-    uses: ./.github/workflows/wdio-all-browsers.yml
-    with:
-      ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
-      build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
-    secrets: inherit
 
-  jil:
-    name: JIL
-    if: github.event_name == 'workflow_dispatch'
-    needs: [find-pull-request]
-    uses: ./.github/workflows/jil-all-browsers.yml
-    with:
-      ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
-      build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
-    secrets: inherit
+  # wdio:
+  #   name: WDIO
+  #   if: github.event_name == 'workflow_dispatch'
+  #   needs: find-pull-request
+  #   uses: ./.github/workflows/wdio-all-browsers.yml
+  #   with:
+  #     ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+  #     build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
+  #   secrets: inherit
 
-  complete-status-comment-pull-request:
-    name: Comment pull request
-    if: always() && github.event_name == 'workflow_dispatch' && needs.find-pull-request.result == 'success'
-    needs: [find-pull-request,wdio-coverage,wdio,jil]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Setup container
-        run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y git tzdata
-      - uses: actions/checkout@v3
-        with:
-          ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-      - name: Get workflow time
-        id: workflow-time
-        run: echo "results=$(TZ=America/Chicago date +'%B %d, %Y %H:%M:%S %Z')" >> $GITHUB_OUTPUT
-      - name: Comment pull request success
-        if: ${{ !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') }}
-        uses: ./.github/actions/comment-pull-request
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
-          comment: |
-            [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Success-green)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
+  # jil:
+  #   name: JIL
+  #   if: github.event_name == 'workflow_dispatch'
+  #   needs: [find-pull-request]
+  #   uses: ./.github/workflows/jil-all-browsers.yml
+  #   with:
+  #     ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+  #     build-number: PR${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number}}-job-${{ github.run_number }}-attempt-${{ github.run_attempt }}
+  #   secrets: inherit
 
-            Last ran on `${{ steps.workflow-time.outputs.results }}`
-            Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
-          comment_tag: <!-- browser_agent pull request checks -->
-      - name: Comment pull request failed
-        if: ${{ contains(needs.*.result, 'failure') }}
-        uses: ./.github/actions/comment-pull-request
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
-          comment: |
-            [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Failure-red)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
+  # complete-status-comment-pull-request:
+  #   name: Comment pull request
+  #   if: always() && github.event_name == 'workflow_dispatch' && needs.find-pull-request.result == 'success'
+  #   needs: [find-pull-request,wdio-coverage,wdio,jil]
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   steps:
+  #     - name: Setup container
+  #       run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y git tzdata
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: 'refs/pull/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}/merge'
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: lts/*
+  #     - name: Get workflow time
+  #       id: workflow-time
+  #       run: echo "results=$(TZ=America/Chicago date +'%B %d, %Y %H:%M:%S %Z')" >> $GITHUB_OUTPUT
+  #     - name: Comment pull request success
+  #       if: ${{ !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') }}
+  #       uses: ./.github/actions/comment-pull-request
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
+  #         comment: |
+  #           [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Success-green)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
 
-            Last ran on `${{ steps.workflow-time.outputs.results }}`
-            Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
-          comment_tag: <!-- browser_agent pull request checks -->
-      - name: Comment pull request cancelled
-        if: ${{ contains(needs.*.result, 'cancelled') }}
-        uses: ./.github/actions/comment-pull-request
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
-          comment: |
-            [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Cancelled-orange)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
+  #           Last ran on `${{ steps.workflow-time.outputs.results }}`
+  #           Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
+  #         comment_tag: <!-- browser_agent pull request checks -->
+  #     - name: Comment pull request failed
+  #       if: ${{ contains(needs.*.result, 'failure') }}
+  #       uses: ./.github/actions/comment-pull-request
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
+  #         comment: |
+  #           [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Failure-red)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
 
-            Last ran on `${{ steps.workflow-time.outputs.results }}`
-            Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
-          comment_tag: <!-- browser_agent pull request checks -->
+  #           Last ran on `${{ steps.workflow-time.outputs.results }}`
+  #           Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
+  #         comment_tag: <!-- browser_agent pull request checks -->
+  #     - name: Comment pull request cancelled
+  #       if: ${{ contains(needs.*.result, 'cancelled') }}
+  #       uses: ./.github/actions/comment-pull-request
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         pr_number: ${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).pr_number }}
+  #         comment: |
+  #           [![Static Badge](https://img.shields.io/badge/Pull_Request_Checks-Cancelled-orange)](https://github.com/newrelic/newrelic-browser-agent/actions/runs/${{ github.run_id }})
+
+  #           Last ran on `${{ steps.workflow-time.outputs.results }}`
+  #           Checking merge of (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}) into [${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_ref }}](https://github.com/newrelic/newrelic-browser-agent/compare/${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).head_sha }}..${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }}) (${{ fromJSON(needs.find-pull-request.outputs.pull-request-target).base_sha }})
+  #         comment_tag: <!-- browser_agent pull request checks -->
